# lexkey-rs

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: copilot-instructions.md
.github/workflows/: bench.yml  ci.yml  cleanup.yml  publish.yml  version.yml
benches/: common.rs  encoder.rs  lexkey.rs
docs/: SPEC.md  TESTS.MD
examples/: encode_demo.rs  hot_path.rs  range_queries.rs
src/: encoder.rs  lexkey.rs  lib.rs
tests/: encoder.rs  lexkey.rs
