[package]
name = "cntryl-lexkey"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Lexicographically-sortable binary key encodings for numbers, strings, UUIDs and composites."
repository = "https://github.com/cntryl/lexkey-rs"
homepage = "https://github.com/cntryl/lexkey-rs"
keywords = ["lexicographic", "encoding", "keys", "uuid", "sortable"]
categories = ["encoding", "database"]
[lib]
name = "lexkey"
path = "src/lib.rs"

[dependencies]
# Add your dependencies here
bytes = "1"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "lexkey"
path = "benches/lexkey.rs"
harness = false

[[bench]]
name = "encoder"
path = "benches/encoder.rs"
harness = false
